--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
+@font-face {
+  font-family: 'GT Eesti Display';
+  src: local('GT Eesti Display'), url(./Fonts/GTEestiDisplay-Medium.ttf) format('ttf');
+  /* other formats include: 'woff2', 'truetype, 'opentype',
+                            'embedded-opentype', and 'svg' */
+}
+
+body, button, input, select, textarea {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "GT Eesti Display", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.form-container{
+  -webkit-box-shadow: 0px 0px 15px 0px #d3d3d3;
+  box-shadow: 0px 0px 15px 0px #d3d3d3;
+  height: 100vh;
+}
+.form-content{
+  padding: 1rem 10rem 0rem 10rem;
+}
+
+.background{
+  background: linear-gradient(90deg, rgba(0,198,255,1) 0%, rgba(0,114,255,1) 100%);
+  height: 100vh;
+}
+
+.is-primary{
+  background: rgb(0,198,255) !important;
+  background: linear-gradient(90deg, rgba(0,198,255,1) 0%, rgba(0,114,255,1) 100%) !important;
+  border: none !important;
 }
