--- a/src/index.css
+++ b/src/index.css
@@ -19,9 +19,6 @@ body, button, input, select, textarea {
   box-shadow: 0px 0px 15px 0px #d3d3d3;
   height: 100vh;
 }
-.form-content{
-  padding: 1rem 10rem 0rem 10rem;
-}
 
 .background{
   background: linear-gradient(90deg, rgba(0,198,255,1) 0%, rgba(0,114,255,1) 100%);
@@ -32,4 +29,10 @@ body, button, input, select, textarea {
   background: rgb(0,198,255) !important;
   background: linear-gradient(90deg, rgba(0,198,255,1) 0%, rgba(0,114,255,1) 100%) !important;
   border: none !important;
+}
+
+.columns.is-vcentered {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
