--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,7 @@
 
 body, button, input, select, textarea {
   margin: 0;
-  font-family: "GT Eesti Display", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif !important;
+  font-family: "GT Eesti Display" !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -26,13 +24,12 @@ body, button, input, select, textarea {
 }
 
 .is-primary{
-  background: rgb(0,198,255) !important;
   background: linear-gradient(90deg, rgba(0,198,255,1) 0%, rgba(0,114,255,1) 100%) !important;
   border: none !important;
 }
 
-.columns.is-vcentered {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+.is-primary-light{
+  background: linear-gradient(90deg, rgba(0,198,255,1) 0%, rgba(0,114,255,0.8) 100%) !important;
+  border: none !important;
 }
+
