Initial stepper set up

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,3 +31,4 @@ $input-shadow: none;
 @import "./node_modules/bulma/sass/form/_all.sass";
 @import "../node_modules/bulma/sass/grid/_all.sass";
 @import "../node_modules/bulma/sass/helpers/_all.sass";
+@import "../node_modules/bulma-o-steps";
