Details page layout (bug fixes needed)

--- a/src/App.scss
+++ b/src/App.scss
@@ -32,3 +32,5 @@ $input-shadow: none;
 @import "../node_modules/bulma/sass/grid/_all.sass";
 @import "../node_modules/bulma/sass/helpers/_all.sass";
 @import "../node_modules/bulma-o-steps";
+@import "~@creativebulma/bulma-divider";
+@import '~@creativebulma/bulma-tagsinput';
