--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ body, button, input, select, textarea {
 }
 
 .image-container{
-  height: 63vh;
+  height: 65vh;
   width: 20vw;
   background-size: cover;
   background-repeat: no-repeat;
@@ -98,4 +98,34 @@ body, button, input, select, textarea {
 .has-background-match {
   background: rgba(250,250,250,1)!important;
   border: none!important;
+}
+
+[type="time"]::-webkit-inner-spin-button {
+  display: none;
+}
+[type="time"]::-webkit-calendar-picker-indicator {
+  display: none;
+}
+
+[type="time"]{
+  box-sizing: border-box;
+  clear: both;
+  font-size: 1rem;
+  width: 100%;
+  position: relative;
+  text-align: center;
+  height: 2.5em;
+  -webkit-appearance: none;
+  align-items: center;
+  border: 2px solid lightgrey;
+  border-radius: 4px;
+  box-shadow: none;
+  display: inline-flex;
+  justify-content: flex-start;
+  line-height: 1.5;
+  padding-bottom: calc(0.5em - 2px);
+  padding-left: calc(0.75em - 2px);
+  padding-right: calc(0.75em - 2px);
+  padding-top: calc(0.5em - 2px);
+  vertical-align: top;
 }
